--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "docsvision",
+  "name": "docs",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lastiqe.github.io/DocsDemo/",
   "dependencies": {
+    "@firebase/firestore-types": "^2.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.15",
+    "@types/lodash": "^4.14.164",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.54",
     "@types/react-dom": "^16.9.8",
@@ -15,6 +18,8 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "firebase": "^8.0.0",
+    "icomoon-react": "^2.0.19",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -22,14 +27,15 @@
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,5 +55,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gh-pages": "^3.1.0",
+    "typescript": "^4.0.3"
+  }
 }
